# gameshare

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.signaling  FLY_DEPLOYMENT.md  GAMING_SETUP.md  GSTREAMER_SETUP.md  LICENSE  NETWORK_FIX.md  NEXT_STEPS.md  OPTIMIZED_SETUP.md  Procfile  README.md  WINDOWS_QUICKSTART.md  build_windows.bat  client.html  config.toml  fly-signaling.toml  fly.toml  index.html  input_bridge.py  input_bridge_direct.py  install_gstreamer.sh  jest.config.js  jest.setup.js  local_test.html  middleware.ts  netlify.toml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  requirements_web.txt  setup_windows_gstreamer.ps1  signaling_relay.js  signaling_server.js  signaling_server_fly.js  signaling_server_secure.js  (+26 more)
app/: globals.css  layout.tsx  page.tsx
app/auth/: page.tsx
cert/: cert.pem  key.pem
client/: client.js  debug-signaling.html  debug.html  index.html  test-debug.html
components/: game-card.tsx  navigation.tsx  retro-carousel.tsx  retro-game-card.tsx  retro-navigation.tsx  starfield-background.tsx
hooks/: use-auth.ts  use-mobile.tsx
host-demo-electron/: index.html  main.js  package-lock.json  package.json
host_streamer/: Cargo.toml
lib/: steam-auth.ts
scripts/: test-setup.sh
signaling/: index.js  package-lock.json  package.json
src/: capture.rs  config.rs  encoding.rs  error.rs  gst_streaming.rs  gstreamer_pipeline.rs  gstreamer_webrtc.rs  host_session.rs  input.rs  main.rs  remote_signaling.rs  signaling.rs  streaming.rs  webrtc_helper.rs  ws_signaler.rs
(+51 files in other folders)
